🐛 fix(component): resolved horizontal overflow

--- a/frontend/src/components/BaseLayout/BaseLayout.module.css
+++ b/frontend/src/components/BaseLayout/BaseLayout.module.css
@@ -7,7 +7,7 @@ html, body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   align-items: center;
   background-color: var(--mantine-color-neutral-0);
 }
@@ -52,6 +52,7 @@ html, body {
   width: 100%;
   min-height: 50rem;
   height: auto;
+  padding: 1rem;
   flex: 1;
 }
 
@@ -59,7 +60,7 @@ html, body {
   position: relative;
   display: flex;
   flex-direction: row;
-  width: 100vw;
+  width: 100%;
   height: 12rem;
   margin-top: 5rem;
   bottom: 0;
@@ -71,7 +72,7 @@ html, body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 1;
 }
